# autogen_anthropic_client

./: README.md  pyproject.toml
.github/workflows/: publish.yaml
autogen_anthropic_client/: __init__.py  _anthropic_client.py  _model_info.py
autogen_anthropic_client/config/: __init__.py
tests/: test_anthropic.py
