[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogen_anthropic_client"
version = "0.0.1"
description = "Anthropic client for autogen"
readme = "README.md"
keywords = ["autogen", "anthropic"]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.45.0",
    "autogen-core>=0.4,<0.5",
]
